--- a/src/less/components/variables.less
+++ b/src/less/components/variables.less
@@ -5,6 +5,12 @@
 
 @yellow: #e2e017;
 
+@grey: #aba8a6;
+
+@white: #fff;
+
+
+
 //-----------------------Примеси фонов----------------------
 
 .mixin__bg-color (@bg-color) {
