--- a/src/less/components/page-header.less
+++ b/src/less/components/page-header.less
@@ -1,9 +1,10 @@
 .page-header {
-	
+	position: relative;
 
-	min-height: 980px;
+	min-height: 982px;
+	border-bottom: 2px solid @grey;
 
-	.mixin__bg-color (#35160f);
+	.mixin__bg-color (@grey);
 	.mixin__bg-img("bg_header.jpg");
 	.mixin__bg-position (center);
 	.mixin__bg-repeat (no-repeat);
@@ -90,10 +91,17 @@
 	}
 	&__link {
 		.link-reset();
-
+	
 		display: inline-block;
 		padding: 15px 12.5px;
+
+		font-family: "Roboto Bold", sans-serif;
 	}
+	&__icon-font:before {
+		content: '\e807';
+
+		font-family: "fontello";
+		font-size: 1.8rem;	}
 }
 
 //-----------slider----------
@@ -110,34 +118,44 @@
 .slider-header {
 	&__content{
 		position: relative;
-
+		
+		min-height: 661px;
+		max-height: 690px;
 		padding-top: 120px;
+		padding-bottom: 243px;
 
 		text-align: center;
+
+		overflow: hidden;
 	}
 	&__header {
 		margin-bottom: 0;
 
-		font-size: 5.0rem;
+		font-size: 3.33rem;
 		text-transform: uppercase;
 		color: #fff;
 	}
 	&__text{
 		margin-top: 0;
+		margin-bottom: 30px;
 
-		font-size: 2.8rem;
+		font-size: 1.85rem;
 		color: #fff;
+		font-family: "Roboto Thin", sans-serif;
 	}
 	&__text--yellow {
 		color: @yellow;
 	}
 	&__btn {
 		padding: 16px 26px;
+		border: none;
 
+		font-size: @font-size-small;
 		text-transform: uppercase;
 		color: @yellow;
 
 		background-color: #000;
+		border-radius: 7px;
 	}
 	&__toggle {
 		position: absolute;	
@@ -152,11 +170,68 @@
 		border-radius: 8px;
 	}
 	&__toggle--prev {
+		.link-reset();
 		top: 272px;
 		left: 1.2%;
+		
+		text-align: center;
+	}
+	&__toggle--prev:before {
+		content: '\e806';
+
+		.link-reset();
+
+		font-family: "fontello";
+		color: #fff;
+		font-size: 2rem;
+		line-height: 3.6rem;
+
 	}
 	&__toggle--next {
+		.link-reset();
+
 		top: 272px;
 		right: 1.2%;
+
+		text-align: center;
+	}
+	&__toggle--next:before {
+		content: '\e805';
+
+		.link-reset();
+
+		font-family: "fontello";
+		color: #fff;
+		font-size: 2rem;
+		line-height: 3.6rem;
+	}
+	&__wrap:after {
+		content: "";
+
+		position: absolute;
+		bottom: -111px;
+		left: 0;
+		z-index: 100;
+
+		height: 4px;
+		width: 25%;
+
+		background-color: @yellow;
+	}
+}
+
+//-----------link--contact-------
+
+.page-header {
+	&__bottom-wrap {
+		min-height: 77px;
+
+		background-color: transparent;
+	}
+	&__link-contact {
+		position: relative;
+		left: 50%;
+
+		margin-left: -33px;
 	}
 }
