--- a/src/less/style.less
+++ b/src/less/style.less
@@ -1,3 +1,5 @@
+@charset "UTF-8";
+
 // Core variables and mixins
 @import (reference) "bs_variables.less";
 @import "components/variables.less";
@@ -19,4 +21,5 @@
 @import "components/page-header.less";
 @import "components/page-main.less";
 @import "components/page-footer.less";
+@import "components/media.less";
 
