Added basic scripts

--- a/src/less/components/page-footer.less
+++ b/src/less/components/page-footer.less
@@ -53,4 +53,12 @@
 
     .link-reset();
   }
+
+//------hover-------
+
+  &__link:hover {
+    .pulse();
+    .animated();
+    text-shadow: 0 2px 3px rgba(255,255, 255, .5);
+  }
 }
