--- a/src/less/components/scafolding.less
+++ b/src/less/components/scafolding.less
@@ -70,6 +70,9 @@ html {
   font-family: 'Roboto Regular', sans-serif;
   font-size: @font-size-base;
 }
+body {
+  overflow-x: hidden; 
+}
 
 use,svg {
   margin: 0;
