--- a/src/less/components/media.less
+++ b/src/less/components/media.less
@@ -1,4 +1,149 @@
 @media (max-width: 750px) {
+    .header-top {
+    &__logo-link {
+      margin-left: 2%;
+    }
+  }
+  .site-nav {
+    margin-left: 2%;
+    &__list {
+      position: absolute !important;
+      top: 100%;
+      right: -15px;
+      z-index: 1000;
+
+      padding-right: 1px;
+
+      text-align: right;
+    }
+    &__li {
+      display: block;
+
+      color: lighten(#000, 20%);
+    }
+    &__link {
+      width: 100%;
+      padding: 15px 12.5px;
+      padding-right: 30px;
+      padding-left: 30px;
+      border-bottom: 1px solid lighten(#000, 50%);
+
+      font-family: 'Roboto Bold', sans-serif;
+
+      background-color: @yellow;
+
+      border-radius: 5px;
+
+      .link-reset();
+    }
+    &__link--basket {
+      bottom: 0px;
+    }
+    &__icon-font:before {
+      right: 10px;
+      bottom: 0px;
+
+      line-height: 1rem;
+    }
+//------toggle--btn-----
+    &__list--hidden-sm {
+      display: none !important;
+    }
+    &__toggle {
+      position: relative;
+
+      display: block;
+     
+      width: 90px;
+      height: 60px;
+      margin-left: auto;
+
+      cursor: pointer;
+
+      //background-color: red;
+    }
+    &__toggle--hover-none {
+      
+    }
+    &__link-toggle {
+      position: absolute;
+      top: 27px;
+      left: 20px;
+
+      display: block;
+
+      width: 50px;
+      height: 6px;
+
+      border-radius: 3px;
+      background-color: #fff;
+    }
+    &__toggle::before {
+      content: "";
+
+      position: absolute;
+      top: 14px;
+      left: 20px;
+
+      display: block;
+
+      width: 50px;
+      height: 6px;
+
+      border-radius: 3px;
+      background-color: #fff;
+    }
+    &__toggle::after {
+      content: "";
+
+      position: absolute;
+      top: 41px;
+      left: 20px;
+
+      display: block;
+
+      width: 50px;
+      height: 6px;
+
+      border-radius: 3px;
+      background-color: #fff;
+    }
+    &__link-toggle--active {
+      position: absolute;
+      top: 27px;
+      left: 20px;
+
+      width: 50px;
+      height: 6px;
+    }
+    &__toggle--active::before {
+      position: absolute;
+      top: 19px;
+      left: 20px;
+
+      width: 50px;
+      height: 6px;
+    }
+    &__toggle--active::after {
+      position: absolute;
+      top: 35px !important;
+      left: 20px;
+
+      width: 50px;
+      height: 6px;
+    }
+//---------HOVER------
+    &__toggle:hover {
+      transform: scale(1.02);
+      transition-duration: .7s;
+    }
+    &__link:hover {
+      width: 100%;
+
+      color: #000;
+      background-color: #fff;
+    }
+  }
   .popular-item {
     margin-bottom: 10px;
     &__header {
@@ -50,6 +195,18 @@
   }
 }
 @media (min-width: 750px) and (max-width: 970px) {
+  .header-top {
+    &__logo-link {
+      margin-left: 5%;
+    }
+  }
+  .site-nav {
+    float: right;
+    margin-left: 2%;
+    &__link {
+      padding: 15px 12.5px !important;
+    }
+  }
   .popular-item {
     margin-bottom: 10px;
     &__header {
@@ -60,13 +217,13 @@
     }
   }
   /* .page-main {
-		&__contact-input--firstname {
-			width: 100%;
-		}
-		&__contact-input--surname {
-			width: 100%;
-		}
-	} */
+    &__contact-input--firstname {
+      width: 100%;
+    }
+    &__contact-input--surname {
+      width: 100%;
+    }
+  } */
 }
 @media (min-width: 970px) and (max-width: 1170px) {
   .popular-item {
@@ -93,13 +250,87 @@
     }
   }
   /*   .page-main {
-		&__contact-input--firstname {
-			width: 100%;
-		}
-		&__contact-input--surname {
-			width: 100%;
-		}
-	} */
+    &__contact-input--firstname {
+      width: 100%;
+    }
+    &__contact-input--surname {
+      width: 100%;
+    }
+  } */
 }
 @media (min-width: 1170px) {
+  .page-main {
+    &__error-message {
+      position: absolute;
+      z-index: 1000;
+
+      display: block;
+      width: 70%;
+      padding: 5px;
+      border: 1px solid red;
+      border-radius: 5px;
+      margin: 0;
+
+      color: #000;
+      font-size: 0.9rem;
+
+      background-color: #fff;
+        &.name {
+          position: absolute;
+          top: 0%;
+          right: 103%;
+          &::before {
+            content: "";
+
+            position: absolute;
+            top: 3px;
+            right: -14%;
+
+            display: block;
+            width: 0px;
+            height: 0px;
+            border: 10px solid transparent;
+            border-left: 10px solid red;
+          }
+        }
+        &.surname {
+          position: absolute;
+          top: 0%;
+          left: 103%;
+          &::before {
+            content: "";
+
+            position: absolute;
+            top: 3px;
+            left: -15%;
+
+            display: block;
+            width: 0px;
+            height: 0px;
+            border: 10px solid transparent;
+            border-right: 10px solid red;
+          }
+        }
+        &.email {
+          position: absolute;
+          top: 225%;
+          left: 0%;
+          &::before {
+            content: "";
+
+            position: absolute;
+            top: -21px;
+            left: 3%;
+
+            display: block;
+            width: 0px;
+            height: 0px;
+            border: 10px solid transparent;
+            border-bottom: 10px solid red;
+          }
+        }
+    }
+  }
+
+
 }
