--- a/src/less/components/page-header.less
+++ b/src/less/components/page-header.less
@@ -34,8 +34,8 @@
 
 .header-top {
   &__logo-wrap {
-    .make-xs-column(12);
-    .make-sm-column(5);
+    .make-xs-column(6);
+    .make-sm-column(2);
     .make-md-column(4);
     .make-lg-column(4);
   }
@@ -59,10 +59,9 @@
 
 .header-top {
   &__nav-wrap {
-    .make-xs-column(12);
-    .make-sm-column(6);
-    .make-lg-column-offset(1);
-    .make-md-column(6);
+    .make-xs-column(6);
+    .make-sm-column(10);
+    .make-md-column(8);
     .make-lg-column-offset(2);
     .make-lg-column(6);
     .make-lg-column-offset(2);
@@ -70,6 +69,8 @@
 }
 
 .site-nav {
+  position: relative;
+
   margin-left: 10.6%;
   &__list {
     position: relative;
