last commit before @media comb

--- a/src/less/components/media.less
+++ b/src/less/components/media.less
@@ -1,9 +1,9 @@
 @media (max-width: 750px) {
     .header-top {
     &__logo-link {
-      margin-left: 2%;
+      
     }
-  }
+  }margin-left: 2%;
   .site-nav {
     margin-left: 2%;
     &__list {
