--- a/src/less/components/scafolding.less
+++ b/src/less/components/scafolding.less
@@ -15,7 +15,7 @@
 }
 
 @font-face {
-  font-family: 'Roboto Regular', sans-serif;
+  font-family: 'Roboto Regular';
   font-weight: normal;
   font-style: normal;
 
@@ -27,7 +27,7 @@
 }
 
 @font-face {
-  font-family: 'Roboto Italic', sans-serif;
+  font-family: 'Roboto Italic';
 
   src: url('../font/Roboto-Italic.ttf'),
   url('../font/Roboto-Italic.eot'),
@@ -37,7 +37,7 @@
 }
 
 @font-face {
-  font-family: 'Roboto Light', sans-serif;
+  font-family: 'Roboto Light';
 
   src: url('../font/Roboto-Light.ttf'),
   url('../font/Roboto-Light.eot'),
@@ -47,7 +47,7 @@
 }
 
 @font-face {
-  font-family: 'Roboto Bold', sans-serif;
+  font-family: 'Roboto Bold';
 
   src: url('../font/Roboto-Bold.ttf'),
   url('../font/Roboto-Bold.eot'),
@@ -57,7 +57,7 @@
 }
 
 @font-face {
-  font-family: 'Roboto Thin', sans-serif;
+  font-family: 'Roboto Thin';
 
   src: url('../font/Roboto-Thin.ttf'),
   url('../font/Roboto-Thin.eot'),
